new proj/src/objects/GE_PRM_Recommendation_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>DOA_Cycle_Time_by_Approver__c</fullName>
        <formula>GE_PRM_DOA_Approved_Rejected_Time_Stamp__c  -  CreatedDate</formula>
        <label>DOA Cycle Time by Approver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver_Email__c</fullName>
        <formula>GE_PRM_Approvers__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Approvers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approvers</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recommendation_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Comments__c</fullName>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_DOA_Approved_Rejected_Time_Stamp__c</fullName>
        <label>DOA Approved/Rejected Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delegated_User_Email__c</fullName>
        <formula>GE_PRM_Delegated_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delegated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delegated User of the Approver</description>
        <inlineHelpText>Delegated User of the Approver</inlineHelpText>
        <label>Delegated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recommendation_Approvals_Delegated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_I_Understand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Understand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Is_Approver_Active__c</fullName>
        <formula>if( GE_PRM_Approvers__r.IsActive, &apos;true&apos; , &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Approver Active?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Is_Delegated_Active__c</fullName>
        <formula>if( GE_PRM_Delegated_User__r.IsActive , &apos;true&apos;,&apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Delegated Active ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Recommendation__c</fullName>
        <label>Recommendation</label>
        <referenceTo>GE_PRM_Recommendation__c</referenceTo>
        <relationshipLabel>Recommendation Approvals</relationshipLabel>
        <relationshipName>Recommendation_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GE_PRM_Region__c</fullName>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status_Date__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GEneral_Council_Needed__c</fullName>
        <formula>IF( ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c , &apos;Non-Renewal&apos;) ,IF(NOT(GE_PRM_Recommendation__r.GE_PRM_No_General_Counsil__c) , IF(ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Non_Renew_Termination_Legl_Action__c,&apos;Yes&apos;),&apos;false&apos;, &apos;true&apos;),&apos;false&apos;),&apos;false&apos;)</formula>
        <label>GEneral Council Needed?</label>
        <type>Text</type>
    </fields>
    <label>Recommendation Approvals</label>
    <listViews>
        <fullName>All_Approvals</fullName>
        <columns>NAME</columns>
        <columns>GE_PRM_Approvers__c</columns>
        <columns>GE_PRM_Delegated_User__c</columns>
        <columns>GE_PRM_Region__c</columns>
        <columns>GE_PRM_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Approvals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Recommendation Approvals Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_I_Understand_To_Reject</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(GE_PRM_Status__c, &apos;Rejected&apos;)  , GE_PRM_I_Understand__c  = false)</errorConditionFormula>
        <errorDisplayField>GE_PRM_I_Understand__c</errorDisplayField>
        <errorMessage>I understand that if this recommendation is rejected, it will not be reversible.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Required</fullName>
        <active>true</active>
        <description>Comments are Required for Reject and Soft Reject</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(GE_PRM_Status__c, &apos;Rejected&apos;),
ISPICKVAL(GE_PRM_Status__c, &apos;Need More Info&apos;)),
 GE_PRM_Comments__c ==&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Comments__c</errorDisplayField>
        <errorMessage>Please Provide Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Cannot_Select_Rejection_Flag</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL( GE_PRM_Status__c , &apos;Approved&apos;), ISPICKVAL( GE_PRM_Status__c , &apos;Need More Info&apos;), ISPICKVAL( GE_PRM_Status__c , &apos;Pending&apos;) ),  GE_PRM_I_Understand__c   )</errorConditionFormula>
        <errorDisplayField>GE_PRM_I_Understand__c</errorDisplayField>
        <errorMessage>Please uncheck Rejection flag</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Finance_Section_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c, &apos;Termination&apos;)), NOT(ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Category__c, &apos;Non-Renewal&apos;)), GE_PRM_Role__c = &apos;Region Commercial Finance&apos;, ISCHANGED( GE_PRM_Status__c), ISPICKVAL( GE_PRM_Status__c , &apos;Approved&apos;), OR( ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Required_Payment_Terms__c, &apos;&apos;), ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Non_standard_payment_terms__c , &apos;&apos;), ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Needs_credit_limit__c , &apos;&apos;) ))</errorConditionFormula>
        <errorMessage>The following fields on the Recommendation must be completed before approval: Required payment terms, Non-standard payment terms, and Needs credit limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Authorized_to_Take_Approval_Actions</fullName>
        <active>false</active>
        <description>Not_Authorized_to_Take_Approval_Actions</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(GE_PRM_Status__c, &apos;Approved&apos;),
ISPICKVAL(GE_PRM_Status__c, &apos;Rejected&apos;),
ISPICKVAL(GE_PRM_Status__c, &apos;Need More Info&apos;)),
AND( $User.GE_HQ_SSO_ID__c &lt;&gt;  GE_PRM_Approvers__r.GE_HQ_SSO_ID__c , $User.GE_HQ_SSO_ID__c &lt;&gt;  GE_PRM_Delegated_User__r.GE_HQ_SSO_ID__c))</errorConditionFormula>
        <errorMessage>You are NOT Authorized to take Approval Actions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recommendation_Locked</fullName>
        <active>true</active>
        <description>No Actions can be taken if the Recommendation is Approved or Rejected</description>
        <errorConditionFormula>OR(
ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Status__c, &apos;Rejected&apos;),
ISPICKVAL( GE_PRM_Recommendation__r.GE_PRM_Status__c, &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>Recommendation is locked, You cannot make any more changes.</errorMessage>
    </validationRules>
</CustomObject>